--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,8 @@
     {% if site.title or site.author %}
       <li>&copy; {{- site.title | default: site.author -}}. All rights reserved.</li>
     {% endif %}
-    <li>Jekyll Theme: <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">Prologue</a></li>
+    <li>Jekyll Theme: <a href="https://github.com/chrisbobbe/jekyll-theme-prologue" target="_blank">Prologue</a></li>
+    <li>Photo by <a href="https://www.pexels.com/photo/brown-rock-formation-on-sea-shore-under-white-clouds-3798146/" target="_blank">Valeriia Miller from Pexels</a></li>
   </ul>
   
 </div>
