--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,8 @@
       <li>&copy; {{- site.title | default: site.author -}}. All rights reserved.</li>
     {% endif %}
     <li>Jekyll Theme: <a href="https://github.com/chrisbobbe/jekyll-theme-prologue" target="_blank">Prologue</a></li>
-    <li>Photo by <a href="https://www.pexels.com/photo/brown-rock-formation-on-sea-shore-under-white-clouds-3798146/" target="_blank">Valeriia Miller from Pexels</a></li>
+    <li>Masthead Photo by <a href="https://unsplash.com/@rhindaxu?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Linda Xu</a> on <a href="https://unsplash.com/s/photos/explore-melbourne?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></li>
+    <li>Profile Banner by <a href="https://www.pexels.com/photo/brown-rock-formation-on-sea-shore-under-white-clouds-3798146/" target="_blank">Valeriia Miller from Pexels</a></li>
   </ul>
   
 </div>
